[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/left_pallete.png" type="Texture" id=1]
[ext_resource path="res://Assets/ball.png" type="Texture" id=2]
[ext_resource path="res://Assets/separator.png" type="Texture" id=3]
[ext_resource path="res://Assets/right_pallete.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Game/PongClone/Paddles.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Game/PongClone/Ball.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Game/PongClone/Wall.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Game/PongClone/Ceiling_Floor.gd" type="Script" id=8]
[ext_resource path="res://Assets/Stardate81316-aolE.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/sounds/pong_sound_effect.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/sounds/missed_sound_effect.wav" type="AudioStream" id=11]
[ext_resource path="res://Scripts/Game/PongClone/PongClone.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 320, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 320, 10 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 9 )

[node name="game" type="Node2D"]
script = ExtResource( 12 )

[node name="leftPaddle" type="Area2D" parent="."]
position = Vector2( 67.628, 188.919 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="leftPaddle"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftPaddle"]
shape = SubResource( 1 )

[node name="rightPaddle" type="Area2D" parent="."]
position = Vector2( 563.815, 188.919 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="rightPaddle"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightPaddle"]
shape = SubResource( 2 )

[node name="ball" type="Area2D" parent="."]
position = Vector2( 320.5, 191.124 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="ball"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource( 3 )

[node name="leftWall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftWall"]
shape = SubResource( 4 )

[node name="rightWall" type="Area2D" parent="."]
position = Vector2( 650, 200 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightWall"]
shape = SubResource( 5 )

[node name="ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
shape = SubResource( 6 )

[node name="floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
shape = SubResource( 7 )

[node name="seperator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 3 )

[node name="leftPlayer" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 8 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="leftPlayer"]
margin_left = 55.0
margin_right = 65.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightPlayer" type="Label" parent="."]
margin_left = 565.0
margin_right = 622.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="rightPlayer"]
margin_left = 55.0
margin_right = 65.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pong_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="missed_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="back_btn" type="Button" parent="."]
margin_left = 300.0
margin_right = 312.0
margin_bottom = 20.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="leftPaddle" to="leftPaddle" method="_on_leftPaddle_area_entered"]
[connection signal="area_entered" from="rightPaddle" to="rightPaddle" method="_on_rightPaddle_area_entered"]
[connection signal="area_entered" from="leftWall" to="leftWall" method="_on_leftWall_area_entered"]
[connection signal="area_entered" from="rightWall" to="rightWall" method="_on_rightWall_area_entered"]
[connection signal="area_entered" from="ceiling" to="ceiling" method="_on_ceiling_area_entered"]
[connection signal="area_entered" from="floor" to="floor" method="_on_floor_area_entered"]
